sw: tdf#63022 fix drag-and-drop of text in same paragraph

SplitNode() inserts new node before the existing one, so pEndTextNd and
aRg.aEnd point one node too far.

Change-Id: I6cea44fafd9d2b47e77e76892a260c5a8c6849fc